--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,16 +11,20 @@
     "-I'C:/Users/Omsin/Documents/Arduino/libraries/Adafruit_BusIO'",
     "-I'C:/Users/Omsin/Documents/Arduino/libraries/Adafruit_Unified_Sensor'",
     "-I'C:/Users/Omsin/Documents/Arduino/libraries/TinyGPSPlus/src'",
-    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/EEPROM'",
-    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/SPI'",
-    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/SD/src'",
-    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/SdFat/src'",
-    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/Wire'",
-    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/Wire/utility'",
-    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/LiquidCrystal/src'",
-    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/LiquidCrystal_I2C-1.1.2'",
+    "-I'C:/Users/Omsin/Documents/Arduino/libraries/Adafruit_FXAS21002C'",
+    "-I'C:/Users/Omsin/Documents/Arduino/libraries/Adafruit_FXOS8700'",
+    "-I'C:/Users/Omsin/Documents/Arduino/libraries/Adafruit_AHRS/src'",
     "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/Adafruit_LiquidCrystal-1.1.0'",
     "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/Adafruit_LiquidCrystal-1.1.0/utility'",
+    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/EEPROM'",
+    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/LiquidCrystal/src'",
+    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/LiquidCrystal_I2C-1.1.2'",
+    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/SD/src'",
+    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/SdFat/src'",
+    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/SPI'",
+    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/Time'",
+    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/Wire'",
+    "-I'C:/Users/Omsin/Documents/Codes/SPACE AC/Descendere/gs_board/lib/Wire/utility'",
     "-D__IMXRT1062__ -DTEENSYDUINO=155",
     "-DF_CPU=600000000",
     "-DUSB_SERIAL",
@@ -36,6 +40,9 @@
   ],
   "files.associations": {
     "sshd_config": "yaml",
-    "cinttypes": "cpp"
+    "cinttypes": "cpp",
+    "vector": "cpp",
+    "limits": "cpp",
+    "cmath": "cpp"
   }
 }
